fix: nowrap text Data inzio

--- a/css/_partials/common.css
+++ b/css/_partials/common.css
@@ -29,3 +29,7 @@
   padding: 5px;
   border: 1px solid #6c757d;
 }
+
+.jq-nowrap {
+  white-space: nowrap;
+}
